Fixed issue #4233. Changed semantic of _fileio.FileIO's close()  method on file objects with closefd=False. The file descriptor is still kept open but the file object behaves like a closed file. The FileIO  object also got a new readonly attribute closefd. Approved by Barry